Fix: UI Issue on Mobile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -237,7 +237,7 @@ nav ul li a:hover::after {
 }
 
 .work:hover .layer {
-    height: 60%;
+    height: 70%;
 }
 
 .btn {
